--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
         "passport": "^0.7.0",
         "passport-google-oauth20": "^2.0.0",
         "pg": "^8.16.3",
+        "prom-client": "^15.1.3",
         "redis": "^5.8.0",
         "slugify": "^1.6.6",
         "ts-node": "^10.9.2",
